Spell publisher right

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "wordle-themes",
 	"displayName": "Wordle Themes",
 	"author": "Logan Ramos",
-	"publiser": "lramos15",
+	"publisher": "lramos15",
 	"description": "Fun themes for worlde!",
 	"version": "0.0.1",
 	"repository": {
