--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Wordle Themes",
 	"author": "Logan Ramos",
 	"publisher": "lramos15",
-	"description": "Fun themes for worlde!",
+	"description": "Customize your wordle results!",
 	"version": "0.0.1",
 	"repository": {
     "type": "git",
